--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         PAUSAR: "ESC"</p></div>
 </body>
 <script src="assets/js/CanvasContext.js"></script>
+<script src="assets/js/Sounds.js"></script>
 <script src="main.js"></script>
 
 </html>
