--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
                         PAUSAR: "ESC"</p></div>
 </body>
 <script src="assets/js/CanvasContext.js"></script>
+<script src="assets/js/Cell.js"></script>
+<script src="assets/js/GUI.js"></script>
+<script src="assets/js/Tetrominos.js"></script>
+<script src="assets/js/Controls.js"></script>
 <script src="assets/js/Sounds.js"></script>
+<script src="assets/js/GameState.js"></script>
 <script src="main.js"></script>
 
 </html>
