--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preload" href="./assets/css/joystix.otf" as="font" type="font" crossorigin>
     <title>Коробе́йники</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/js/RLWi/popUp.css">
     <audio preload="auto" id="bgm" src="./assets/audio/Korobeiniki.mp3" type="audio/mpeg"></audio>
 </head>
 <body>
@@ -64,7 +65,9 @@
                         GUARDAR PEÇA: "C", ESPAÇO, CLIQUE(HOLD);<br>
                         PAUSAR: "ESC"</p></div>
 </body>
-<script src="assets/js/CanvasContext.js"></script>
+<script src="assets/js/RLWi/RLWi.js"></script>
+<script src="assets/js/RLWi/canvasContext.js"></script>
+<script src="assets/js/ScreenGrid.js"></script>
 <script src="assets/js/Cell.js"></script>
 <script src="assets/js/GUI.js"></script>
 <script src="assets/js/Tetrominos.js"></script>
@@ -72,5 +75,7 @@
 <script src="assets/js/Sounds.js"></script>
 <script src="assets/js/GameState.js"></script>
 <script src="main.js"></script>
+
+
 
 </html>
